# lakehouse-platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py
api/core/: __init__.py  auth.py  config.py  database.py
api/routers/: __init__.py  catalog.py  clusters.py  jobs.py  mlflow_router.py  notebooks.py  sql.py  streaming.py
compute/: __init__.py  spark_manager.py
compute/config/: spark-defaults.conf
docker/: docker-compose.yml
docker/Dockerfiles/: api.Dockerfile  frontend.Dockerfile
docker/init-scripts/: postgres-init.sql
docker/monitoring/: prometheus.yml
docs/: api-reference.md  architecture.md  deployment.md
frontend/: nginx.conf  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Clusters.tsx  Dashboard.tsx  DataCatalog.tsx  Jobs.tsx  MLExperiments.tsx  Notebooks.tsx  SQLEditor.tsx  Settings.tsx  Streaming.tsx
k8s/helm/lakehouse-platform/: Chart.yaml  values.yaml
k8s/manifests/: 00-namespace.yaml  01-api-deployment.yaml  02-frontend-deployment.yaml  03-ingress.yaml  04-configmap.yaml  05-rbac.yaml  06-pdb.yaml
ml/: __init__.py
notebooks/jupyter_config/: jupyterhub_config.py
sql/: __init__.py  query_engine.py
storage/: __init__.py  catalog.py  delta_manager.py
streaming/: __init__.py
streaming/flink_jobs/: delta_cdc_pipeline.py
streaming/kafka_config/: server.properties
terraform/aws/: main.tf
terraform/gcp/: main.tf
tests/unit/: test_api.py
(+8 files in other folders)
